# Manager

./: .editorconfig  .gitignore  Makefile  README.md  meson.build  meson_options.txt
.forgejo/workflows/: CI.yml  main.yml
.github/workflows/: CI.yml
build-aux/altlinux/: alt-software.spec.in  build-deps  prepare  rules
build-aux/flatpak/: org.altlinux.AtomicControlCenter.Devel.json  org.altlinux.AtomicControlCenter.Devel.yml  org.altlinux.Software.yml  ru.alt_atomic.Manager-Devel.json  ru.alt_atomic.Manager.Devel.json
data/: app.metainfo.xml.in  desktop-devel.in.in  desktop.in  desktop.in.in  gresource.xml  gresource.xml.in  gschema.xml  meson.build  metainfo-devel.xml.in.in  metainfo.xml.in.in  org.altlinux.AtomicControlCenter.Devel.desktop.in  org.altlinux.AtomicControlCenter.desktop.in  org.altlinux.AtomicControlCenter.gresource.xml  org.altlinux.AtomicControlCenter.gschema.xml  org.altlinux.AtomicControlCenter.metainfo.xml.in  ru.alt_atomic.Manager.Devel.desktop.in  ru.alt_atomic.Manager.desktop.in  ru.alt_atomic.Manager.gresource.xml  ru.alt_atomic.Manager.gschema.xml  ru.alt_atomic.Manager.metainfo.xml.in
data/ui/: explore-page-content.blp  installed-page-content.blp  library-page-content.blp  main-page-content.blp  menu-button.blp  preferences-dialog.blp  search-page-content.blp  software-page.blp  system-page-content.blp  system-page.blp  updates-page-content.blp  window.blp
po/: POTFILES.in  alt-software.pot
service/: main.vala  meson.build  root-containers-storage.vala  service.vala  utils.vala
service/data/: alt-software.service.in  meson.build  org.altlinux.Software.policy.in
src/: about.vala  application.vala  config.vapi  errors.vala  main.vala  meson.build  preferences-dialog.vala  system-manager.vala  utils.vala  window.vala
src/apm/: distrobox-module.vala  event-handler.vala  kernel-module.vala  repo-module.vala  session-talker.vala  system-module.vala  system-talker.vala
src/dbus/: service.vala
src/objects/: constants.vala  container-info.vala  enums.vala  event.vala  filter-fields-info.vala  filter-info.vala  image-data.vala  info.vala  list-params.vala  list.vala  meson.build  package-info.vala  package.vala  packages-data.vala  packages-info.vala  search.vala  update.vala
src/objects/distrobox/: container-info.vala  list-resonse.vala  package-info.vala  package.vala  update-response.vala
src/objects/oci/: image-inspect.vala  layer-data.vala
src/objects/repo/: add-remove-response.vala  branches-response.vala  info.vala  list-response.vala  set-response.vala  simulate-response.vala  task-packages-response.vala
src/objects/system/: apt-config-response.vala  boot-image-info.vala  booted-image.vala  check-essential-package-info.vala  check-info.vala  check-response.vala  history-record.vala  image-config.vala  image-data.vala  image-spec.vala  list-params.vala  list-response.vala  multi-info-response.vala  operation-info.vala  package-info.vala  packages-data.vala  packages-info.vala  search-response.vala  sections-response.vala  spec.vala  status-image-data.vala  status-image-image-data.vala  status.vala  update-response.vala  upgrade-response.vala
src/objects/system/application/: branding-info.vala  categories-response.vala  content-rating-info.vala  developer-info.vala  display-length-info.vala  filter-fields-app-stream-response.vala  icon-info.vala  image-info.vala  info-response.vala  info.vala  language-info.vala  list-component-info.vala  list-response.vala  property-info.vala  provides-dbus-info.vala  provides-info.vala  release-artifact-checksum-info.vala  release-artifact-info.vala  release-artifact-size-info.vala  release-info.vala  release-issue-info.vala  release-url-info.vala  screenshot-info.vala  translation-info.vala  update-response.vala
src/objects/system/config/: config.vala
src/objects/system/config/modules/: base.vala  branding.vala  copy.vala  git.vala  include.vala  kernel.vala  link.vala  merge.vala  mkdir.vala  move.vala  network.vala  packages.vala  remove.vala  replace.vala  repos.vala  shell.vala  systemd.vala
src/objects/system/image/: apply-response.vala  history-response.vala  info.vala  spec-image-info.vala  spec-info.vala  status-image-data.vala  status-image-info.vala  status-info.vala
src/objects/system/kernel/: check-old-kernels-response.vala  info.vala  install-kernel-modules-response.vala  install-update-kernel-response.vala  list-kernel-modules-response.vala  module-info.vala  remove-kernel-modules-response.vala  w-reasons.vala  with-modules-info.vala
src/pages/: explore-page-content.vala  installed-page-content.vala  library-page-content.vala  main-page-content.vala  search-page-content.vala  software-page.vala  system-page-content.vala  system-page-context.vala  updates-page-content.vala
src/widgets/: menu-button.vala
