vapi_sources = files(
  'config.vapi',
)

vala_sources = files(
  'apm/distrobox-module.vala',
  'apm/event-handler.vala',
  'apm/kernel-module.vala',
  'apm/repo-module.vala',
  'apm/system-module.vala',

  'objects/distrobox/container-info.vala',
  'objects/distrobox/list-resonse.vala',
  'objects/distrobox/package-info.vala',
  'objects/distrobox/package.vala',
  'objects/distrobox/update-response.vala',

  'objects/repo/add-remove-response.vala',
  'objects/repo/branches-response.vala',
  'objects/repo/info.vala',
  'objects/repo/list-response.vala',
  'objects/repo/set-response.vala',
  'objects/repo/simulate-response.vala',
  'objects/repo/task-packages-response.vala',

  'objects/system/application/branding-info.vala',
  'objects/system/application/categories-response.vala',
  'objects/system/application/content-rating-info.vala',
  'objects/system/application/developer-info.vala',
  'objects/system/application/display-length-info.vala',
  'objects/system/application/filter-fields-app-stream-response.vala',
  'objects/system/application/icon-info.vala',
  'objects/system/application/image-info.vala',
  'objects/system/application/info-response.vala',
  'objects/system/application/info.vala',
  'objects/system/application/language-info.vala',
  'objects/system/application/list-component-info.vala',
  'objects/system/application/list-response.vala',
  'objects/system/application/property-info.vala',
  'objects/system/application/provides-dbus-info.vala',
  'objects/system/application/provides-info.vala',
  'objects/system/application/release-artifact-checksum-info.vala',
  'objects/system/application/release-artifact-info.vala',
  'objects/system/application/release-artifact-size-info.vala',
  'objects/system/application/release-info.vala',
  'objects/system/application/release-issue-info.vala',
  'objects/system/application/release-url-info.vala',
  'objects/system/application/screenshot-info.vala',
  'objects/system/application/translation-info.vala',
  'objects/system/application/update-response.vala',

  'objects/system/config/modules/base.vala',
  'objects/system/config/modules/branding.vala',
  'objects/system/config/modules/copy.vala',
  'objects/system/config/modules/git.vala',
  'objects/system/config/modules/include.vala',
  'objects/system/config/modules/kernel.vala',
  'objects/system/config/modules/link.vala',
  'objects/system/config/modules/merge.vala',
  'objects/system/config/modules/mkdir.vala',
  'objects/system/config/modules/move.vala',
  'objects/system/config/modules/network.vala',
  'objects/system/config/modules/packages.vala',
  'objects/system/config/modules/remove.vala',
  'objects/system/config/modules/replace.vala',
  'objects/system/config/modules/repos.vala',
  'objects/system/config/modules/shell.vala',
  'objects/system/config/modules/systemd.vala',
  'objects/system/config/config.vala',

  'objects/system/image/apply-response.vala',
  'objects/system/image/history-response.vala',
  'objects/system/image/info.vala',
  'objects/system/image/spec-image-info.vala',
  'objects/system/image/spec-info.vala',
  'objects/system/image/status-image-data.vala',
  'objects/system/image/status-image-info.vala',
  'objects/system/image/status-info.vala',

  'objects/system/kernel/check-old-kernels-response.vala',
  'objects/system/kernel/info.vala',
  'objects/system/kernel/install-kernel-modules-response.vala',
  'objects/system/kernel/install-update-kernel-response.vala',
  'objects/system/kernel/list-kernel-modules-response.vala',
  'objects/system/kernel/module-info.vala',
  'objects/system/kernel/remove-kernel-modules-response.vala',
  'objects/system/kernel/w-reasons.vala',
  'objects/system/kernel/with-modules-info.vala',

  'objects/system/apt-config-response.vala',
  'objects/system/boot-image-info.vala',
  'objects/system/check-essential-package-info.vala',
  'objects/system/check-info.vala',
  'objects/system/check-response.vala',
  'objects/system/list-response.vala',
  'objects/system/multi-info-response.vala',
  'objects/system/package-info.vala',
  'objects/system/search-response.vala',
  'objects/system/sections-response.vala',
  'objects/system/update-response.vala',
  'objects/system/upgrade-response.vala',

  'objects/constants.vala',
  'objects/enums.vala',
  'objects/event.vala',
  'objects/filter-fields-info.vala',

  'pages/explore-page-content.vala',
  'pages/installed-page-content.vala',
  'pages/main-page-content.vala',
  'pages/system-page-content.vala',
  'pages/updates-page-content.vala',

  'widgets/menu-button.vala',

  'about.vala',
  'application.vala',
  'errors.vala',
  'main.vala',
  'preferences-dialog.vala',
  'utils.vala',
  'window.vala',
)

sources = [
  vala_sources,
  vapi_sources,
  resources,
]

executable(
  meson.project_name(),
  sources,
  include_directories: config_h_dir,
  dependencies: dependencies,
  install: true,
)
