vala_sources += files(
  
  'distrobox/container-info.vala',
  'distrobox/list-resonse.vala',
  'distrobox/package-info.vala',
  'distrobox/package.vala',
  'distrobox/update-response.vala',

  'repo/add-remove-response.vala',
  'repo/branches-response.vala',
  'repo/info.vala',
  'repo/list-response.vala',
  'repo/set-response.vala',
  'repo/simulate-response.vala',
  'repo/task-packages-response.vala',

  'system/application/branding-info.vala',
  'system/application/categories-response.vala',
  'system/application/content-rating-info.vala',
  'system/application/developer-info.vala',
  'system/application/display-length-info.vala',
  'system/application/filter-fields-app-stream-response.vala',
  'system/application/icon-info.vala',
  'system/application/image-info.vala',
  'system/application/info-response.vala',
  'system/application/info.vala',
  'system/application/language-info.vala',
  'system/application/list-component-info.vala',
  'system/application/list-response.vala',
  'system/application/property-info.vala',
  'system/application/provides-dbus-info.vala',
  'system/application/provides-info.vala',
  'system/application/release-artifact-checksum-info.vala',
  'system/application/release-artifact-info.vala',
  'system/application/release-artifact-size-info.vala',
  'system/application/release-info.vala',
  'system/application/release-issue-info.vala',
  'system/application/release-url-info.vala',
  'system/application/screenshot-info.vala',
  'system/application/translation-info.vala',
  'system/application/update-response.vala',

  'system/config/modules/base.vala',
  'system/config/modules/branding.vala',
  'system/config/modules/copy.vala',
  'system/config/modules/git.vala',
  'system/config/modules/include.vala',
  'system/config/modules/kernel.vala',
  'system/config/modules/link.vala',
  'system/config/modules/merge.vala',
  'system/config/modules/mkdir.vala',
  'system/config/modules/move.vala',
  'system/config/modules/network.vala',
  'system/config/modules/packages.vala',
  'system/config/modules/remove.vala',
  'system/config/modules/replace.vala',
  'system/config/modules/repos.vala',
  'system/config/modules/shell.vala',
  'system/config/modules/systemd.vala',
  'system/config/config.vala',

  'system/image/apply-response.vala',
  'system/image/history-response.vala',
  'system/image/info.vala',
  'system/image/spec-image-info.vala',
  'system/image/spec-info.vala',
  'system/image/status-image-data.vala',
  'system/image/status-image-info.vala',
  'system/image/status-info.vala',

  'system/kernel/check-old-kernels-response.vala',
  'system/kernel/info.vala',
  'system/kernel/install-kernel-modules-response.vala',
  'system/kernel/install-update-kernel-response.vala',
  'system/kernel/list-kernel-modules-response.vala',
  'system/kernel/module-info.vala',
  'system/kernel/remove-kernel-modules-response.vala',
  'system/kernel/w-reasons.vala',
  'system/kernel/with-modules-info.vala',

  'system/apt-config-response.vala',
  'system/boot-image-info.vala',
  'system/check-essential-package-info.vala',
  'system/check-info.vala',
  'system/check-response.vala',
  'system/list-response.vala',
  'system/multi-info-response.vala',
  'system/package-info.vala',
  'system/search-response.vala',
  'system/sections-response.vala',
  'system/update-response.vala',
  'system/upgrade-response.vala',

  'constants.vala',
  'enums.vala',
  'event.vala',
  'filter-fields-info.vala',

)
